Button style fix to align submit buttons

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -5,7 +5,7 @@ button, input[type=submit] {
   border: none;
 }
 
-button.submit, input[type=submit] {
+button[type=submit], input[type=submit] {
   margin: 12px 0;
 }
 
